--- a/client/src/components/HeroImage/HeroImage.module.css
+++ b/client/src/components/HeroImage/HeroImage.module.css
@@ -23,3 +23,53 @@
   left: 180px;
   text-align: center;
 }
+
+/* Responsive adjustments */
+@media (max-width: 1100px) {
+  .bubbleText {
+    top: 170px;
+    left: 170px;
+    font-size: 1.2rem;
+    line-height: 2.2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .man {
+    max-width: 480px;
+  }
+
+  .graffiti {
+    right: 40px;
+    top: 20px;
+    max-width: 200px;
+    max-height: 250px;
+  }
+
+  .bubbleText {
+    top: 95px;
+    left: 90px;
+    font-size: 0.7rem;
+    line-height: 1.3rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .man {
+    max-width: 350px;
+  }
+
+  .graffiti {
+    right: 40px;
+    top: 20px;
+    max-width: 200px;
+    max-height: 180px;
+  }
+
+  .bubbleText {
+    top: 70px;
+    left: 65px;
+    font-size: 0.5rem;
+    line-height: 1rem;
+  }
+}
