--- a/client/src/components/HomeHero/HomeHero.module.css
+++ b/client/src/components/HomeHero/HomeHero.module.css
@@ -4,3 +4,9 @@
   align-items: center;
   justify-content: space-around;
 }
+
+@media (max-width: 1100px) {
+  .wrapper {
+    flex-direction: column;
+  }
+}
