--- a/client/src/components/HomeHero/HomeHero.module.css
+++ b/client/src/components/HomeHero/HomeHero.module.css
@@ -1,12 +1,21 @@
 .wrapper {
   padding-top: 100px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.container {
+  display: flex;
   align-items: center;
   justify-content: space-around;
+  width: 100%;
 }
 
 @media (max-width: 1100px) {
-  .wrapper {
+  .container {
     flex-direction: column;
+    row-gap: 40px;
   }
 }
