--- a/client/src/components/HeroImage/HeroImage.module.css
+++ b/client/src/components/HeroImage/HeroImage.module.css
@@ -5,12 +5,13 @@
 .man {
   z-index: 2;
   position: relative;
+  max-width: 600px;
 }
 
 .graffiti {
   position: absolute;
-  right: 100px;
-  top: 40px;
+  right: 40px;
+  top: 10px;
   z-index: 1;
 }
 
@@ -19,18 +20,18 @@
   z-index: 3;
   color: var(--white);
   font-weight: bold;
-  top: 180px;
-  left: 180px;
+  top: 145px;
+  left: 90px;
   text-align: center;
 }
 
 /* Responsive adjustments */
 @media (max-width: 1100px) {
   .bubbleText {
-    top: 170px;
-    left: 170px;
-    font-size: 1.2rem;
-    line-height: 2.2rem;
+    top: 140px;
+    left: 90px;
+    font-size: 1rem;
+    line-height: 1.8rem;
   }
 }
 
@@ -47,9 +48,9 @@
   }
 
   .bubbleText {
-    top: 95px;
-    left: 90px;
-    font-size: 0.7rem;
+    top: 115px;
+    left: 65px;
+    font-size: 0.9rem;
     line-height: 1.3rem;
   }
 }
@@ -67,9 +68,9 @@
   }
 
   .bubbleText {
-    top: 70px;
-    left: 65px;
-    font-size: 0.5rem;
+    top: 80px;
+    left: 50px;
+    font-size: 0.6rem;
     line-height: 1rem;
   }
 }
