--- a/client/src/layouts/CourseCatalogueHeader/CourseCatalogueHeader.module.css
+++ b/client/src/layouts/CourseCatalogueHeader/CourseCatalogueHeader.module.css
@@ -6,7 +6,7 @@
   padding: 50px;
   font-weight: bold;
   text-transform: uppercase;
-  background-color: var(--bg-white);
+  background-color: transparent;
 }
 
 .wrapper > img {
