--- a/client/src/components/CourseCategories/CourseCategories.module.css
+++ b/client/src/components/CourseCategories/CourseCategories.module.css
@@ -22,6 +22,7 @@
   cursor: pointer;
   border-right: 3px solid var(--primary-beige);
   padding-right: 20px;
+  text-align: center;
 }
 
 .categoryTitle:last-child {
@@ -40,8 +41,14 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
   .categoryContainer {
     flex-direction: column;
+    align-items: center;
+  }
+
+  .categoryTitle {
+    border: none;
+    padding: none;
   }
 }
