--- a/client/src/layouts/Footer/Footer.module.css
+++ b/client/src/layouts/Footer/Footer.module.css
@@ -129,6 +129,11 @@
 
 @media (max-width: 1100px) {
   .upper {
+    align-items: center;
     flex-direction: column;
+  }
+  .wrapper {
+    justify-content: center;
+    width: 100%;
   }
 }
