--- a/client/src/pages/CategoryDisplay/CategoryDisplay.module.css
+++ b/client/src/pages/CategoryDisplay/CategoryDisplay.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: flex-start;
 }
