--- a/client/src/layouts/MobileHeader/MobileHeader.module.css
+++ b/client/src/layouts/MobileHeader/MobileHeader.module.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: transparent;
+  background-color: var(--white);
   padding: 15px 20px;
   position: fixed;
   width: 100%;
