--- a/client/src/pages/Signin/Signin.module.css
+++ b/client/src/pages/Signin/Signin.module.css
@@ -2,8 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 80dvh;
   background-color: var(--bg-white);
+  margin-top: 120px;
+  margin-bottom: 50px;
 }
 
 .signinContainer {
