--- a/client/src/pages/CourseDisplay/CourseDisplay.module.css
+++ b/client/src/pages/CourseDisplay/CourseDisplay.module.css
@@ -184,6 +184,22 @@
   aspect-ratio: 1 / 1;
 }
 
+.certificationBtn {
+  color: var(--white);
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  align-self: flex-end;
+  background-color: var(--primary-blue);
+  padding: 12px 24px;
+  margin: 12px 0px;
+}
+
+.certificationBtn:hover {
+  background-color: var(--primary-beige);
+}
+
 /* Responsive Design */
 @media (max-width: 1024px) {
   .lower {
