added forgot password page | forgot password controller | reset password Controller

--- a/client/src/pages/Signin/Signin.module.css
+++ b/client/src/pages/Signin/Signin.module.css
@@ -90,3 +90,13 @@
 .errorMessage {
   color: var(--primary-beige);
 }
+
+.forgotPassword {
+  color: var(--grey-accent);
+  line-height: 50px;
+  transition: 0.3s ease-in-out;
+}
+
+.forgotPassword:hover {
+  text-decoration: underline;
+}
