added otp styles

--- a/client/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/client/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -94,3 +94,33 @@
   background: var(--secondary-beige);
   color: var(--grey-accent);
 }
+
+.error {
+  color: var(--primary-beige);
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.otpContainer {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 0.5rem;
+}
+
+.otpInput {
+  width: 45px;
+  height: 50px;
+  font-size: 1.5rem;
+  text-align: center;
+  border: 2px solid var(--secondary-blue);
+  border-radius: 8px;
+  background-color: var(--secondary-beige);
+  color: var(--grey-accent);
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+.otpInput:focus {
+  border-color: var(--primary-blue);
+}
