--- a/client/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/client/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -124,3 +124,14 @@
 .otpInput:focus {
   border-color: var(--primary-blue);
 }
+
+.subTitle {
+  font-size: 1rem;
+  color: var(--secondary-blue);
+  text-align: left;
+  margin: 10px 0px;
+  padding: 8px;
+  background-color: var(--bg-white);
+  border-radius: 5px;
+  border-left: 4px solid var(--primary-blue);
+}
