--- a/client/src/components/ModulePanel/ModulePanel.module.css
+++ b/client/src/components/ModulePanel/ModulePanel.module.css
@@ -21,10 +21,16 @@
 
 .toggleBtn {
   position: absolute;
-  top: 10px;
-  right: -60px;
+  top: 50%;
+  right: -30px;
   padding: 8px 12px;
   cursor: pointer;
+  font-size: 2rem;
+  color: var(--primary-blue);
+}
+
+.toggleBtnOpen {
+  right: -12px !important;
 }
 
 .sidePanelContent {
@@ -33,6 +39,14 @@
   align-items: flex-start;
   justify-content: flex-start;
   padding: 20px;
+}
+
+.title {
+  color: var(--primary-blue);
+  font-weight: bold;
+  font-size: 3rem;
+  text-align: center;
+  align-self: center;
 }
 
 .modulesList {
