--- a/client/src/components/ModuleAccordion/ModuleAccordion.module.css
+++ b/client/src/components/ModuleAccordion/ModuleAccordion.module.css
@@ -13,6 +13,7 @@
   align-items: center;
   padding: 12px 16px;
   cursor: pointer;
+  font-size: 1.2rem;
   font-weight: bold;
   background-color: var(--white);
   transition: 0.3s ease-in-out;
@@ -43,4 +44,45 @@
   padding: 10px 15px;
   background-color: var(--bg-white);
   border-top: 1px solid var(--primary-blue);
+}
+
+.accordionContentItem {
+  color: var(--primary-blue);
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.1rem;
+  transition: 0.3s ease-in-out;
+  line-height: 40px;
+  position: relative;
+  padding-left: 30px;
+}
+
+.accordionContentItem:hover {
+  color: var(--primary-beige);
+}
+
+.accordionContentItem::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 16px;
+  border: 2px solid var(--primary-blue);
+  border-radius: 50%;
+  background-color: transparent;
+  transition: 0.3s ease-in-out;
+}
+
+.accordionContentItem.selected::after {
+  content: "";
+  position: absolute;
+  left: 5px; /* centers the inner fill */
+  top: 50%;
+  transform: translateY(-50%);
+  width: 10px;
+  height: 10px;
+  background-color: var(--primary-blue);
+  border-radius: 50%;
 }
