--- a/client/src/components/ModulePanel/ModulePanel.module.css
+++ b/client/src/components/ModulePanel/ModulePanel.module.css
@@ -22,16 +22,15 @@
 
 .toggleBtn {
   position: absolute;
-  top: 50%;
-  right: -30px;
+  top: 10%;
+  left: 0px;
+  transform: translateY(-50%);
   padding: 8px 12px;
   cursor: pointer;
   font-size: 2rem;
-  color: var(--primary-blue);
-}
-
-.toggleBtnOpen {
-  right: -12px !important;
+  color: var(--white);
+  background-color: var(--primary-beige);
+  z-index: 100;
 }
 
 .sidePanelContent {
