added styling to stop content from being pushed when side panel opens

--- a/client/src/components/ClassContent/ClassContent.module.css
+++ b/client/src/components/ClassContent/ClassContent.module.css
@@ -1,3 +1,6 @@
 .wrapper {
-  margin: 0px 80px;
+  margin: 0px auto;
+  max-width: 800px; /* Or any other width that works for your design */
+  flex-shrink: 0; /* Prevent it from shrinking */
+  width: 100%; /* Allow it to use available space up to the max-width */
 }
