--- a/client/src/components/ModulePanel/ModulePanel.module.css
+++ b/client/src/components/ModulePanel/ModulePanel.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  position: relative;
+  position: absolute;
   width: 350px;
   background-color: var(--bg-white);
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
