--- a/client/src/components/AssessmentView/AssessmentView.module.css
+++ b/client/src/components/AssessmentView/AssessmentView.module.css
@@ -84,11 +84,17 @@
   color: var(--primary-blue);
 }
 
+.submitText {
+  margin: 50px 0px 16px 0px;
+  font-size: 1.2rem;
+  color: var(--primary-blue);
+  font-weight: bold;
+}
+
 .btns {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-top: 50px;
 }
 
 .upload {
@@ -122,7 +128,6 @@
   cursor: pointer;
   font-size: 16px;
   text-align: center;
-  margin-bottom: 10px;
   transition: background-color 0.3s ease-in-out;
 }
 
