--- a/client/src/pages/MyCourses/MyCourses.module.css
+++ b/client/src/pages/MyCourses/MyCourses.module.css
@@ -57,6 +57,33 @@
   color: var(--grey-accent);
 }
 
+.navbar {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 20px;
+}
+
+.navButton {
+  background: var(--primary-blue);
+  padding: 8px 16px;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 5px;
+  color: var(--white);
+  transition: 0.3s ease;
+}
+
+.navButton:hover {
+  background: var(--primary-beige);
+}
+
+.active {
+  background: var(--primary-beige);
+  color: var(--white);
+  border-color: var(--primary-beige);
+}
+
 /* Ensure even spacing on medium screens */
 @media (max-width: 1024px) {
   .courseGrid {
@@ -67,6 +94,10 @@
 
 /* Adjust layout for tablets */
 @media (max-width: 768px) {
+  .wrapper {
+    margin-top: 100px;
+  }
+
   .courseGrid {
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 16px;
