--- a/client/src/components/CourseCategories/CourseCategories.module.css
+++ b/client/src/components/CourseCategories/CourseCategories.module.css
@@ -23,6 +23,7 @@
   border-right: 3px solid var(--primary-beige);
   padding-right: 20px;
   text-align: center;
+  font-size: 1.2rem
 }
 
 .categoryTitle:last-child {
