--- a/client/src/components/HomeHero/HomeHero.module.css
+++ b/client/src/components/HomeHero/HomeHero.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding-top: 100px;
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,5 +17,11 @@
   .container {
     flex-direction: column;
     row-gap: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    padding-top: 100px;
   }
 }
