--- a/client/src/pages/CoachingSessions/CoachingSessions.module.css
+++ b/client/src/pages/CoachingSessions/CoachingSessions.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   background-color: var(--bg-white);
-  min-height: 100vh;
+  min-height: 70dvh;
   padding: 4rem 1rem;
   display: flex;
   justify-content: center;
@@ -64,4 +64,10 @@ button:hover {
   margin-top: 1rem;
   text-align: center;
   font-weight: 500;
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    margin-top: 10px;
+  }
 }
