--- a/client/src/components/EditClass/EditClass.module.css
+++ b/client/src/components/EditClass/EditClass.module.css
@@ -100,6 +100,14 @@
   margin-top: 20px;
 }
 
+.moduleFormContainer h2 {
+  color: var(--primary-blue);
+}
+
+.moduleFormContainer label {
+  color: var(--secondary-blue);
+}
+
 .moduleFormContainer input {
   padding: 8px;
   margin-top: 5px;
