--- a/client/src/pages/CourseDisplay/CourseDisplay.module.css
+++ b/client/src/pages/CourseDisplay/CourseDisplay.module.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   width: 100%;
   padding: 20px;
+  position: relative;
 }
 
 /* Ensure courseContainer takes full width */
