--- a/client/src/pages/CourseInfo/CourseInfo.module.css
+++ b/client/src/pages/CourseInfo/CourseInfo.module.css
@@ -20,6 +20,7 @@
   overflow: hidden;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  max-height: 500px;
 }
 
 .thumbnailImage {
