--- a/client/src/pages/CourseShowCase/CourseShowCase.module.css
+++ b/client/src/pages/CourseShowCase/CourseShowCase.module.css
@@ -108,6 +108,79 @@
   background-color: var(--white);
 }
 
+/* Modal Overlay */
+.purchaseModalWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; /* Ensure it's above all other elements */
+  pointer-events: all; /* Allow clicks inside the modal */
+}
+
+/* Modal Content */
+.purchaseModal {
+  background: var(--bg-white);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+  position: relative;
+}
+
+/* Modal Title */
+.modalTitle {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--primary-blue);
+}
+
+/* Modal Text */
+.modalText {
+  font-size: 1rem;
+  margin: 15px 0;
+  color: var(--grey-accent);
+}
+
+/* Modal Buttons */
+.modalActions {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+}
+
+.confirmButton,
+.cancelButton {
+  background: var(--primary-blue);
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.confirmButton:hover {
+  background: var(--secondary-blue);
+}
+
+.cancelButton {
+  background: var(--primary-beige);
+}
+
+.cancelButton:hover {
+  background: var(--secondary-beige);
+  color: var(--primary-beige);
+}
+
 @media (max-width: 768px) {
   .wrapper {
     margin-top: 100px;
