--- a/client/src/pages/CourseInfo/CourseInfo.module.css
+++ b/client/src/pages/CourseInfo/CourseInfo.module.css
@@ -50,9 +50,13 @@
   font-size: 18px;
   color: var(--grey-accent);
   margin-bottom: 20px;
-  text-align: center;
+  text-align: left;
+  padding: 20px;
 }
 
+.courseDescription li {
+  color: var(--grey-accent);
+}
 /* Course details */
 .courseDetails {
   display: flex;
