new logo and course catalogue spacing fixed

--- a/client/src/components/CourseCatalogueHero/CourseCatalogueHero.module.css
+++ b/client/src/components/CourseCatalogueHero/CourseCatalogueHero.module.css
@@ -39,16 +39,18 @@
   }
 }
 
-
 @media (max-width: 768px) {
   .title {
     font-size: 4rem;
   }
 }
 
-
 @media (max-width: 480px) {
   .title {
     font-size: 3rem;
+  }
+
+  .bubble {
+    top: -100px;
   }
 }
