--- a/client/src/pages/ClassShowCase/ClassShowCase.module.css
+++ b/client/src/pages/ClassShowCase/ClassShowCase.module.css
@@ -6,6 +6,7 @@
   color: var(--primary-blue);
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  min-height: 70vh;
 }
 
 .header {
