--- a/client/src/pages/CourseShowCase/CourseShowCase.module.css
+++ b/client/src/pages/CourseShowCase/CourseShowCase.module.css
@@ -89,7 +89,7 @@
 
 .descriptionText {
   color: #333;
-  line-height: 1.6;
+  line-height: 30px;
   font-weight: bold;
 }
 
@@ -179,6 +179,10 @@
 
 .cancelButton:hover {
   background: var(--secondary-beige);
+  color: var(--primary-beige);
+}
+
+.beige {
   color: var(--primary-beige);
 }
 
