added show certification attribute to class model and a controller to set it true

--- a/client/src/components/EditClass/EditClass.module.css
+++ b/client/src/components/EditClass/EditClass.module.css
@@ -90,7 +90,7 @@
 }
 
 .addModuleButton:hover {
-  background-color: var(--secondary-beige);
+  background-color: var(--primary-blue);
 }
 
 .moduleFormContainer {
