--- a/client/src/components/ModulePanel/ModulePanel.module.css
+++ b/client/src/components/ModulePanel/ModulePanel.module.css
@@ -34,11 +34,13 @@
 }
 
 .sidePanelContent {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   padding: 20px;
+  height: 100%;
 }
 
 .title {
@@ -54,4 +56,20 @@
   padding-left: 20px;
   margin: 20px 0;
   width: 100%;
+}
+
+.getCertificate {
+  position: absolute;
+  align-self: flex-end;
+  bottom: 10px;
+  background-color: var(--primary-blue);
+  color: var(--white);
+  padding: 10px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.getCertificate:hover {
+  background-color: var(--secondary-blue);
 }
