added setMenu false to all mobile header

--- a/client/src/pages/CategoryDisplay/CategoryDisplay.module.css
+++ b/client/src/pages/CategoryDisplay/CategoryDisplay.module.css
@@ -4,3 +4,9 @@
   align-items: stretch;
   justify-content: flex-start;
 }
+
+@media (max-width: 768px) {
+  .wrapper {
+    margin-top: 100px;
+  }
+}
