--- a/client/src/pages/PaymentFailed/PaymentFailed.module.css
+++ b/client/src/pages/PaymentFailed/PaymentFailed.module.css
@@ -47,3 +47,9 @@
 .button:hover {
   background-color: var(--primary-beige);
 }
+
+@media (max-width: 768px) {
+  .wrapper {
+    margin-top: 100px;
+  }
+}
