--- a/client/src/components/EditCourse/EditCourse.module.css
+++ b/client/src/components/EditCourse/EditCourse.module.css
@@ -34,6 +34,7 @@
   margin-bottom: 10px;
   border-radius: 6px;
   border: 1px solid var(--grey-accent);
+  background-color: transparent;
 }
 
 .textarea {
