--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,3 +77,13 @@ button {
   transition: 0.3s ease-in-out;
   border: none;
 }
+
+.language-btn-container {
+  display: flex;
+  gap: 10px;
+  margin: 20px 10px;
+}
+
+.language-btn-container button {
+  background-color: transparent;
+}
