--- a/client/src/layouts/Header/Header.module.css
+++ b/client/src/layouts/Header/Header.module.css
@@ -21,6 +21,10 @@
   column-gap: 20px;
 }
 
+.arabic {
+  font-size: 1.2rem;
+}
+
 .link {
   color: var(--primary-blue);
   text-decoration: none;
@@ -36,7 +40,7 @@
   align-items: center;
   justify-content: center;
   color: var(--primary-blue);
-  gap:6px;
+  gap: 6px;
 }
 
 .signin {
