mission and we are sections translated

--- a/client/src/components/AboutRight/AboutRight.module.css
+++ b/client/src/components/AboutRight/AboutRight.module.css
@@ -28,6 +28,10 @@
   color: var(--primary-blue);
 }
 
+.arabicTitle {
+  text-align: right;
+}
+
 /* Responsive Content */
 .content {
   text-align: justify;
