--- a/client/src/pages/CoachingSessions/CoachingSessions.module.css
+++ b/client/src/pages/CoachingSessions/CoachingSessions.module.css
@@ -36,15 +36,16 @@
   gap: 1rem;
 }
 
-input {
+.input {
   padding: 0.75rem 1rem;
   font-size: 1rem;
   border-radius: 8px;
   border: 1px solid var(--secondary-beige);
   background-color: var(--bg-white);
+  text-align: right;
 }
 
-button {
+.button {
   padding: 0.75rem;
   font-size: 1rem;
   background-color: var(--primary-blue);
@@ -55,7 +56,7 @@ button {
   transition: 0.2s ease;
 }
 
-button:hover {
+.button:hover {
   background-color: var(--secondary-blue);
 }
 
