added styling for the arabic version

--- a/client/src/layouts/Footer/Footer.module.css
+++ b/client/src/layouts/Footer/Footer.module.css
@@ -105,6 +105,11 @@
   bottom: 10px;
 }
 
+.arabicSubscribe {
+  left: 10px;
+  right: initial;
+}
+
 .lower {
   display: flex;
   align-items: center;
