added delete module button

--- a/client/src/components/AddModuleForm/AddContent.module.css
+++ b/client/src/components/AddModuleForm/AddContent.module.css
@@ -100,3 +100,11 @@
 .contentForm button:hover {
   background-color: var(--secondary-blue);
 }
+
+#deleteBtn {
+  background-color: var(--primary-red);
+}
+
+#deleteBtn:hover {
+  background-color: var(--secondary-red);
+}
