--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,9 @@
   --bg-white: #f2f4f8;
   --white: #ffffff;
 
+  --primary-red: #8C1C13;
+  --secondary-red: #A32219;
+
   --grey-accent: #3e3e3e;
   --footer-grey: #8f8da0;
 }
